--- a/202406teamDevelopment/src/main/resources/application.properties
+++ b/202406teamDevelopment/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/subject_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=makina
